<resources>
    <string name="app_name">Clarity</string>
    <!--Preferences Keys-->
    <string name="preference_file_key">com.example.clarity.PREFERENCE_FILE_KEY</string>
    <string name="font_pref_key">font_pref</string>
    <string name="highlight_color_pref_key">highlight_color_pref</string>
    <string name="text_size_pref_key">text_size_pref</string>
    <string name="text_color_pref_key">text_color_pref</string>
    <string name="line_spacing_pref_key">line_spacing_pref</string>

    <!--Font Filenames-->
    <string name="open_dyslexic_dir">fonts/OpenDyslexic-Regular.otf</string>

    <!--Font Names-->
    <string name="arial">Arial</string>
    <string name="courier">Courier</string>
    <string name="helvetica">Helvetica</string>
    <string name="open_dyslexic">Open Dyslexic</string>
    <string name="roboto">Roboto</string>
    <string name="verdana">Verdana</string>

    <!--Preference Categories-->
    <string name="font_pref">Font</string>
    <string name="highlight_color_pref">Highlight Color</string>
    <string name="text_size_pref">Text Size</string>
    <string name="text_color_pref">Text Color</string>
    <string name="line_spacing_pref">Line Spacing</string>
    <string name="reset_settings">Reset Settings</string>

    <!--Bottom Nav-->
    <string name="bottom_nav_gallery">Gallery</string>
    <string name="bottom_nav_add">Add</string>
    <string name="bottom_nav_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_paste_text">PasteText</string>

    <color name="white">#FFFFFF</color>

</resources>
