<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_settings_font"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFontFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_back_settings_font"
            android:layout_width="12dp"
            android:layout_height="24dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/back"
            android:gravity="right" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:background="@color/defaultBackground">


        <ImageView
            android:id="@+id/selectionCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="66dp"
            android:scaleX=".25"
            android:scaleY=".25"
            android:src="@drawable/selection_check" />

        <TextView
            android:id="@+id/settings_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:text="Font"
            android:textColor="@color/defaultText"
            android:textSize="24dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/arialOption"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/arialText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/arial_regular"
                        android:text="@string/arial"
                        android:textColor="@color/settingsText"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/settingsDivider" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/courierOption"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/courierText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/courier_regular"
                        android:text="@string/courier"
                        android:textColor="@color/settingsText"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/settingsDivider" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/helveticaOption"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/helveticaText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/helvetica_regular"
                        android:text="@string/helvetica"
                        android:textColor="@color/settingsText"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/settingsDivider" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/openDyslexicOption"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/openDyslexicText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/open_dyslexic_regular"
                        android:text="@string/open_dyslexic"
                        android:textColor="@color/settingsText"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/settingsDivider" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/robotoOption"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/robotoText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/roboto"
                        android:textColor="@color/settingsText"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/settingsDivider" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/verdanaOption"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/verdanaText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/verdana_regular"
                        android:text="@string/verdana"
                        android:textColor="@color/settingsText"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/settingsDivider" />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</FrameLayout>